# cpp-mcp-gateway

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
spec/: overview.md  registration.md  runtime.md  testing.md
src/: filesystem_utils.cpp  filesystem_utils.h  generation_queue.cpp  generation_queue.h  logging.cpp  logging.h  main.cpp  mcp_gateway.cpp  mcp_gateway.h  metrics.cpp  metrics.h  registration_service.cpp  registration_service.h  runtime_registry.cpp  runtime_registry.h  spec_validation.cpp  spec_validation.h
tests/: unit_tests.cpp
